[tool.poetry]
name = "arris-scraper"
version = "0.1.0"
packages = [
  { include = "arris_scraper" }
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
influxdb-client = "^1.39.0"
beautifulsoup4 = "^4.12.2"
tzlocal = "^5.3.1"
typer = "^0.16.0"
orjson = "^3.11.0"
pint = "^0.24.4"
python-dotenv = "^1.1.1"

[tool.poetry.scripts]
arris-scraper = "arris_scraper.cli:app"
